<?xml version="1.0"?>
<package format="3">
  <name>a2_utils</name>
  <version>0.0.1</version>
  <description>General-purpose A2 utility nodes, hardware and simulation agnostic</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>a2_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_api</depend>
  <depend>unitree_hg</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
